# caterpillard

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: draft_pdf.yml  tests.yaml
docs/source/: conf.py  getting_started.md  index.md  index.rst  source_code_details.md  usage.md
docs/source/notebooks/: tutorial.ipynb
paper/: paper.bib  paper.md
src/caterpillard/: __init__.py  caterpillar.py  caterpillar_execute.py  feature.md
src/caterpillard/data/: cd_input_data.csv
tests/: test_caterpillar.py
