[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caterpillar_test_mechaprabal"
version = "0.1"
authors = [
  { name="Prabal Pratap Singh", email="mechaprabal@gmail.com" },
]
description = "Caterpillar Diagram Test"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'pandas',
  'matplotlib',
  'progressbar2',
  'sphinx', # for documentation
  'myst-parser', # markdown parser for sphinx
  'sphinx-autobuild', # monitor for doc changes
  'furo', #theme for documentation
  'nbsphinx', # for notebooks in docs
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""