[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caterpillarmech"
version = "0.1"
authors = [
  { name="Prabal Pratap Singh", email="mechaprabal@gmail.com" },
  { name="Deepu Philip", email="prabal@iitk.ac.in" },
]
description = "Caterpillar Diagram Test"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'pandas',
  'matplotlib',
  'progressbar2',
]

[project.optional-dependencies]
dev = [
    'sphinx', # for documentation
  'myst-parser', # markdown parser for sphinx
  'sphinx-autobuild', # monitor for doc changes
  'furo', #theme for documentation
  'nbsphinx', # for notebooks in docs
  'sphinxcontrib-napoleon', # for numpy style docstrings
]

# [project.urls]
# "Homepage" = ""
# "Bug Tracker" = ""

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]